fix contrast text capçalera home i aria label

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -22,6 +22,7 @@ h1 {
   font-family: cursive;
   font-size: 3rem;
   padding: 1px 10px;
+  line-height: 150%;
 }
 
 h2 {
@@ -36,7 +37,6 @@ h3 {
 
 h4 {
   font-size: 1.4rem;
-  color: #333;
 }
 
 a {
@@ -54,10 +54,8 @@ p {
   font-family: 'Montserrat';
   font-weight: 400;
   font-size: 1.2rem;
-  color: #333;
-}
+  }
 
-h1,
 h2,
 h3,
 h4,
@@ -65,6 +63,7 @@ h5,
 h6,
 p {
   line-height: 150%;
+  color: #333;
 }
 
 
